// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PostTemplate /> Should match snapshot 1`] = `
.c6 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c14 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: none;
}

.c17 .c5 {
  margin: 0;
  margin-top: calc(1.6rem - 0.6rem);
  margin-bottom: 1.6rem;
}

.c17 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c17 img {
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
  width: 100%;
  max-width: 100%;
}

.c17:hover a {
  color: #dc143c;
}

.c17:hover img {
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

.c18 {
  max-width: 100%;
  -webkit-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}

.c16 {
  max-width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c20 {
  width: 100%;
  text-align: center;
}

.c20 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.6rem;
}

.c21 {
  width: 100%;
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c21 p {
  margin: 2.4rem 0;
}

.c21 a,
.c21 a:visited,
.c21 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c21 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c21 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c21 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c21 pre code {
  color: inherit;
  background: inherit;
}

.c21 img {
  max-width: 100%;
}

.c21 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c21 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem 0;
  text-align: center;
  line-height: 1.3;
  margin: 2.4rem 0;
}

.c21 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c21 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c21 ul,
.c21 ol {
  margin: 2.4rem 4.0rem;
}

.c21 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c21 table {
  width: 100%;
  border-collapse: collapse;
}

.c21 table td,
.c21 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c21 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c22 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c12 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 6.4rem;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c12 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c10 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c1 {
  width: 27rem;
  height: 100vh;
  background: #000000;
  border-radius: 4px;
  padding: 0.8rem calc(0.8rem - 0.6rem);
  position: fixed;
  left: -26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  z-index: 1001;
}

.c1 .c7 {
  margin-top: 6.4rem;
}

.c1 .c7 img {
  border: 0.5rem solid #dc143c;
}

.c1.active {
  left: 0rem;
  overflow-y: auto;
  overflow-x: hidden;
}

.c4 {
  width: 100%;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: #000000;
  border-radius: 4px;
  left: 2rem;
}

.c2 svg {
  width: 3rem;
  color: #dc143c;
  padding-right: 3.5rem;
  padding-top: 1rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c2 svg:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c2 .menuIcon {
  padding: 0;
}

.c9 {
  width: 90%;
  margin: 4rem 0;
}

.c0 {
  width: 100%;
  height: 100vh;
}

.c11 {
  padding-top: 6.4rem;
}

.c15 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c19 {
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c16 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c21 {
    font-size: 2rem;
  }

  .c21 pre {
    width: 85%;
  }

  .c21 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-label="Open menu"
          class="c3 menuIcon"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open menu
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <nav
        aria-hidden="true"
        class="c4"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7 c8"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming"
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c9"
        >
          <a
            class="c10"
            href="https://pt-br.reactjs.org/docs/hooks-effect.html"
            target="_blank"
          >
            useEffect
          </a>
        </section>
      </nav>
    </div>
    <div
      class="c11"
    >
      <header
        class="c12"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7 c8"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming - Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais."
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c13"
        >
          <h1
            class="c5 c14"
          >
            New Programming
          </h1>
          <p>
            Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais.
          </p>
        </section>
      </header>
    </div>
    <div
      class="c15"
    >
      <main
        class="c16"
      >
        <section
          class="c17"
        >
          <a
            href="/post/usando-effect-hook-hook-de-efeito"
          >
            <img
              alt="Usando Effect Hook (Hook de Efeito)"
              class="c18"
              src="https://res.cloudinary.com/project-cdn/image/upload/v1643992684/use_Effect_hook_62405844a5.png"
            />
          </a>
          <h2
            class="c5 c14"
          >
            <a
              href="/post/usando-effect-hook-hook-de-efeito"
            >
              Usando Effect Hook (Hook de Efeito)
            </a>
          </h2>
          <p
            class=""
          >
            O Effect Hook (Hook de Efeito) te permite executar efeitos colaterais em componentes funcionais.
          </p>
        </section>
      </main>
    </div>
    <div
      class="c19"
    >
      <footer
        class="c20"
      >
        <div
          class="c21"
        >
          <p>
            A footer paragraph
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c22"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c3"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;

exports[`<PostTemplate /> Should match snapshot without posts 1`] = `
.c6 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: uppercase;
}

.c14 {
  line-height: 1.2;
  color: #000000;
  font-size: 2.4rem;
  text-transform: none;
}

.c16 {
  max-width: 100%;
  margin: 0 auto;
  display: grid;
  grid-template-columns: repeat(auto-fill,minmax(28rem,1fr));
  gap: 3.2rem;
  padding: 3.2rem;
}

.c17 {
  padding: 3.2rem;
  text-align: center;
  font-size: 1.6rem;
}

.c19 {
  width: 100%;
  text-align: center;
}

.c19 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 1.6rem;
}

.c20 {
  width: 100%;
  font-size: calc(1.6rem + 0.2rem);
  line-height: 1.5;
}

.c20 p {
  margin: 2.4rem 0;
}

.c20 a,
.c20 a:visited,
.c20 a:link {
  color: #dc143c;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c20 a:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c20 code {
  font-family: monospace;
  color: #dc143c;
  font-size: 1.6rem;
  background: #DDDDDD;
  padding: 0.2rem;
  margin: 0.2rem;
}

.c20 pre {
  background: #000000;
  padding: 2.4rem;
  font-family: monospace;
  color: #FFFFFF;
  margin: 2.4rem 0;
  overflow-x: auto;
  font-size: 1.6rem;
}

.c20 pre code {
  color: inherit;
  background: inherit;
}

.c20 img {
  max-width: 100%;
}

.c20 .image {
  background: #DDDDDD;
  line-height: 0;
  margin: 2.4rem 0;
}

.c20 .image figcaption {
  font-size: 1.6rem;
  padding: 1.6rem 0;
  text-align: center;
  line-height: 1.3;
  margin: 2.4rem 0;
}

.c20 .image-style-side {
  max-width: 50%;
  float: right;
  margin: 2.4rem;
}

.c20 hr {
  border: none;
  border-bottom: 0.1rem solid #DDDDDD;
}

.c20 ul,
.c20 ol {
  margin: 2.4rem 4.0rem;
}

.c20 .table {
  width: 100%;
  overflow: hidden;
  overflow-x: auto;
}

.c20 table {
  width: 100%;
  border-collapse: collapse;
}

.c20 table td,
.c20 table th {
  padding: 1.6rem;
  border: 0.1rem solid #DDDDDD;
}

.c20 blockquote {
  border-left: 0.5rem solid #dc143c;
  color: #AAAAAA;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
  padding-left: 2.4rem;
  font-style: italic;
  margin: 2.4rem;
}

.c3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c21 {
  position: fixed;
  background: #000000;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 4rem;
  height: 4rem;
  bottom: 2rem;
  right: 2rem;
  z-index: 6;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
}

.c8 > img {
  width: 15rem;
  height: 15rem;
  border-radius: 50%;
}

.c12 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 6.4rem;
  max-width: 96rem;
  color: #333333;
  font-size: 1.6rem;
  margin: 0 auto;
}

.c12 .c5 {
  margin: 0 0 calc(1.6rem - 1rem);
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column wrap;
  -ms-flex-flow: column wrap;
  flex-flow: column wrap;
  margin-left: 3.2rem;
  max-width: 48rem;
}

.c10 {
  display: block;
  color: #FFFFFF;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  border-right: 0.5rem solid #000000;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
}

.c10:hover {
  border-right: 0.5rem solid #dc143c;
  color: #dc143c;
}

.c1 {
  width: 27rem;
  height: 100vh;
  background: #000000;
  border-radius: 4px;
  padding: 0.8rem calc(0.8rem - 0.6rem);
  position: fixed;
  left: -26rem;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out;
  z-index: 1001;
}

.c1 .c7 {
  margin-top: 6.4rem;
}

.c1 .c7 img {
  border: 0.5rem solid #dc143c;
}

.c1.active {
  left: 0rem;
  overflow-y: auto;
  overflow-x: hidden;
}

.c4 {
  width: 100%;
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-color: #000000;
  border-radius: 4px;
  left: 2rem;
}

.c2 svg {
  width: 3rem;
  color: #dc143c;
  padding-right: 3.5rem;
  padding-top: 1rem;
  cursor: pointer;
  -webkit-transition: filter 300ms ease-in-out;
  transition: filter 300ms ease-in-out;
}

.c2 svg:hover {
  -webkit-filter: brightness(50%);
  filter: brightness(50%);
}

.c2 .menuIcon {
  padding: 0;
}

.c9 {
  width: 90%;
  margin: 4rem 0;
}

.c0 {
  width: 100%;
  height: 100vh;
}

.c11 {
  padding-top: 6.4rem;
}

.c15 {
  max-width: 120rem;
  width: 100%;
  margin: 0 auto;
  margin-bottom: 6.4rem;
}

.c18 {
  margin: 0 auto;
  padding: 3.2rem;
}

@media (max-width:360px) {
  .c16 {
    grid-template-columns: 1fr;
  }
}

@media (max-width:768px) {
  .c20 {
    font-size: 2rem;
  }

  .c20 pre {
    width: 85%;
  }

  .c20 .image-style-side {
    max-width: 100%;
    float: none;
    margin: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          aria-label="Open menu"
          class="c3 menuIcon"
          fill="currentColor"
          focusable="false"
          role="img"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Open menu
          </title>
          <path
            d="M0 0h24v24H0V0z"
            fill="none"
          />
          <path
            d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
          />
        </svg>
      </div>
      <nav
        aria-hidden="true"
        class="c4"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7 c8"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming"
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c9"
        >
          <a
            class="c10"
            href="https://pt-br.reactjs.org/docs/hooks-effect.html"
            target="_blank"
          >
            useEffect
          </a>
        </section>
      </nav>
    </div>
    <div
      class="c11"
    >
      <header
        class="c12"
      >
        <h1
          class="c5 c6"
        >
          <a
            class="c7 c8"
            href="/"
            target="_self"
          >
            <img
              alt="New Programming - Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais."
              src="/assets/images/logo.jpg"
            />
          </a>
        </h1>
        <section
          class="c13"
        >
          <h1
            class="c5 c14"
          >
            New Programming
          </h1>
          <p>
            Esse blog é voltado para os amantes de tecnologia que querem aprender sempre um pouco mais.
          </p>
        </section>
      </header>
    </div>
    <div
      class="c15"
    >
      <main
        class="c16"
      >
        <p
          class="c17"
        >
          Nenhum post encontrado aqui =(
        </p>
      </main>
    </div>
    <div
      class="c18"
    >
      <footer
        class="c19"
      >
        <div
          class="c20"
        >
          <p>
            A footer paragraph
          </p>
        </div>
      </footer>
    </div>
    <a
      aria-label="Go to top"
      class="c21"
      href="#"
      title="Go to top"
    >
      <svg
        aria-hidden="true"
        class="c3"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6 1.41 1.41z"
        />
      </svg>
    </a>
  </div>
</div>
`;
